# GameBaseCPP

./: .gitignore  CMakeLists.txt  cmake-debug.sh  readme.md
ideas/: entityDataFormat.txt
include/config/: startup.h  startup_config.h
include/model/: Block.h  GameObject.h  input_model.h
include/model/entity/: Block.h  Entity.h  GameObject.h
include/model/entity/test/: Dog.h  Milk.h  Person.h
include/tests/: input_test.h  sdl_test.h  test_data_read.h  test_write_data_example.h
include/util/data/: DataGrid.h  DataGridBuilder.h  GameObjectGrid.h  Grid.h  Grid.tpp  ObjectGrid.h  ObjectGridBuilder.h  StringGrid.h
include/util/file/: GameDataReader.h
src/: main.cc  main.cpp
src/model/: Block.cpp  GameObject.cpp  input_model.cc
src/model/entity/: Block.cc  Block.cpp  Entity.cc  Entity.cpp
src/model/entity/test/: Dog.cpp  Milk.cc  Milk.cpp  Person.cc  Person.cpp
src/tests/: input_test.cc  sdl_test.cc  test_data_read.cc  test_data_read.cpp  test_out.txt  test_write_data_example.cc  test_write_data_example.cpp
src/util/data/: DataGrid.cpp  DataGridBuilder.cc  DataGridBuilder.cpp  GameObjectGrid.cpp  Grid.cpp  ObjectGrid.cpp  ObjectGridBuilder.cc  ObjectGridBuilder.cpp  StringGrid.cpp
src/util/file/: GameDataReader.cpp
